# invoice-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
invoice_agent/: __init__.py  client.py  models.py
invoice_agent/data/: __init__.py  goods_receipts.py  invoice_templates.py  purchase_orders.py  vendor_database.py
invoice_agent/graders/: __init__.py
invoice_agent/server/: __init__.py  app.py  invoice_environment.py
server/: app.py
tests/: test_confidence.py  test_endpoints.py  test_environment.py  test_graders.py  test_templates.py  test_three_way_match.py
